Remove announcement bar

--- a/src/components/AnnouncementBar.astro
+++ b/src/components/AnnouncementBar.astro
@@ -2,9 +2,7 @@
 const message = "🎄 Free delivery for Christmas 🎁";
 ---
 
-<div
-  class="announcement-bar"
->
+<div class="announcement-bar">
   {message}
 </div>
 
